Refactored host name